--- a/login/index.html
+++ b/login/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://ryanmusselwhite.com/prototype-designs/login"/>
     <meta property="og:image" content="https://ryanmusselwhite.com/prototype-designs/login/twitter.png"/>
 
-    <title>Trips dashboard design</title>
+    <title>Login Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="../libraries/css/font-awesome.min.css">
