Final push fixes

--- a/login/index.html
+++ b/login/index.html
@@ -39,15 +39,15 @@
                 <div class="col-sm-12 col-md-6 blueBackground radiusRight shadow">
                     <div class="row">
                         <div class="col-12">
-                            <div class="btn btn-primary radiusRight pill pull-right">Login</div>
-                            <div class="btn btn-secondary radiusLeft pill pull-right">Sign-Up</div>
+                            <div class="btn btn-primary radiusRight pill float-right">Login</div>
+                            <div class="btn btn-secondary radiusLeft pill float-right">Sign-Up</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="formLogin col-12">
-                            <h5 class="pull-left inactive">Sign In</h5>
-                            <span class="meta pull-left">or</span>
-                            <h5 class="pull-left active">Sign Up</h5>
+                            <h5 class="float-left inactive">Sign In</h5>
+                            <span class="meta float-left">or</span>
+                            <h5 class="float-left active">Sign Up</h5>
                             <div class="formContainer">
                                 <label>
                                     FULL NAME
